<resources>
    <string name="app_name">BeerDiary</string>
    <string name="add_a_beer">Add a Beer!</string>
    <string name="no_beer_name">unknown</string>
    <string name="score">Score</string>
    <string name="beer_image">Image of beer if taken</string>
    <string name="enter_name_of_beer">Enter name of beer</string>
    <string name="enter_brewery_of_beer">Enter brewery of beer</string>
    <string name="brewer">brewer</string>
    <string name="beer_name">beer name</string>
    <string name="beer_comment">beer comment</string>
    <string name="add">Add</string>
    <string name="beer_score">beer score</string>
    <string name="click_to_edit_comment">Click to edit comment.</string>
    <string name="image_of_beer">Image of beer</string>
    <string name="add_as_location">Add as location</string>
    <string name="edit">Edit</string>
    <string name="card_beer_score">%1$.1f/5</string>
    <string name="beer_size_oz">%1$.1f FL OZ</string>
    <string name="beer_size_placeholder">Beer size</string>
    <string name="beer_size_ml">%1$.0f ml</string>
    <string name="confirm">Confirm</string>
    <string name="alcohol_by_volume">Alcohol by volume (%)</string>
    <string name="beer_type">Beer type</string>
    <string name="cancel">Cancel</string>
    <string name="beer_strength_format">%1$.1f%</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="continue_action">Continue</string>
</resources>
